force-app/main/default/objects/Scores__x/Scores__x.object-meta.xml
<CustomObject>
    <description>Scores</description>
    <externalDataSource>Workday</externalDataSource>
    <externalName>Scores</externalName>
    <label>Scores</label>
    <pluralLabel>Scores</pluralLabel>
</CustomObject>