force-app/main/default/objects/Scores__x/fields/Attribute__c.field-meta.xml
<CustomField>
    <fullName>Attribute__c</fullName>
    <description>Attribute</description>
    <externalDeveloperName>Attribute</externalDeveloperName>
    <label>Attribute</label>
    <length>128</length>
    <type>Text</type>
</CustomField>