force-app/main/default/objects/Scores__x/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <description>Candidate</description>
    <externalDeveloperName>Candidate</externalDeveloperName>
    <label>Candidate</label>
    <length>255</length>
    <referenceTargetField>Referral__c.Candidate_ID__c</referenceTargetField>
    <referenceTo>Referral__c</referenceTo>
    <relationshipLabel>Scores</relationshipLabel>
    <relationshipName>Scores1</relationshipName>
    <type>IndirectLookup</type>
</CustomField>