force-app/main/default/objects/Scores__x/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>Score</description>
    <externalDeveloperName>Score</externalDeveloperName>
    <label>Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>